set id on new var div correctly #53

--- a/src/panhandler/templates/panhandler/edit_skillet.html
+++ b/src/panhandler/templates/panhandler/edit_skillet.html
@@ -500,6 +500,7 @@
             new_variable_key.val(key);
             new_variable_value.val(value);
 
+            new_variable.attr('id', 'variable_' + key);
             all_variables.append(new_variable);
 
             new_variable.css('display', '');
