--- a/src/panhandler/templates/panhandler/repo_detail.html
+++ b/src/panhandler/templates/panhandler/repo_detail.html
@@ -160,18 +160,18 @@
                                 <i class="fas fa-clone text-muted"></i>
                             </a>
                             <a href="/panhandler/delete_skillet/{{ repo_detail.name }}/{{ s.name }}"
+                               onclick="return confirm('Are you sure you want to delete this Skillet?')"
                                class="d-inline"
                                title="Delete Skillet">
                                 <i class="fas fa-trash text-muted"></i>
                             </a>
-
                         </td>
                     </tr>
                 {% endfor %}
                 </tbody>
             </table>
             <div class="text-right w-100">
-                <a href="/panhandler/create_skillet/{{ repo_detail.name }}" class="btn btn-primary">Create Skillet</a>
+                <a href="/panhandler/generate_skillet/{{ repo_detail.name }}" class="btn btn-primary">Create Skillet</a>
             </div>
             </p>
 
